--- a/app/eventos/eventos.html
+++ b/app/eventos/eventos.html
@@ -18,7 +18,8 @@
 		</div>
 
 
-		<button  ng-click="seeAllEvents()" class="mdl-cell mdl-cell--3-col mdl-cell--12-col-phone mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"> Ver Todos</button>
+		<button  ng-click="seeAllEvents()"
+				 class="mdl-cell mdl-cell--3-col mdl-cell--12-col-phone mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"> Ver Todos</button>
 
 	</div>
 	<br>
