--- a/app/evento/evento.html
+++ b/app/evento/evento.html
@@ -8,19 +8,26 @@
 
 <center>
 	<h6>{{event.name}}</h6>
+
 	<div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-phone">
 		<!--<h4>{{event.name}}</h4> -->
 
-		<div class="mdl-cell mdl-cell--6-col mdl-cell--12-col-phone">
-		<img
-				style=" width:100%; height: auto;" src="{{event.image}}">
-		<br>
-		</div>
-
 
 		<div class="mdl-cell mdl-color--white  mdl-cell--10-col mdl-cell--12-col-phone mdl-shadow--2dp" >
+			<div class=" mdl-color--white  mdl-cell--8-col mdl-cell--12-col-phone " >
+			<table><tr>
+				<th>
 
-			<div class="mdl-cell mdl-color--white  mdl-cell--6-col mdl-cell--12-col-phone" >
+					<div class="mdl-cell mdl-cell--8-col mdl-cell--12-col-phone">
+					<img
+							style=" width:100%; height: auto;" src="{{event.image}}">
+					<br>
+				</div>
+
+				</th>
+				<th>
+
+			<div class=" mdl-color--white  mdl-cell--12-col mdl-cell--12-col-phone" >
 				<br>
 				<i  class="material-icons " style="vertical-align: middle;">alarm</i>
 				{{event.date | date : 'mediumDate'}}
@@ -29,70 +36,65 @@
 				<br>
 
 			</div>
-
-
-				<div class="mdl-cell mdl-color--white  mdl-cell--6-col mdl-cell--12-col-phone" >
+				<div class=" mdl-color--white  mdl-cell--12-col mdl-cell--12-col-phone" >
 					<i  class="material-icons " style="vertical-align: middle;">music_note</i>
 					{{event.musicGenres}}
 					<br>
 				</div>
-				<div class="mdl-cell mdl-color--white  mdl-cell--6-col mdl-cell--12-col-phone" >
+				<div class=" mdl-color--white  mdl-cell--12-col mdl-cell--12-col-phone" >
 					<i  class="material-icons " style="vertical-align: middle;">accessibility</i>
 					{{event.clothing}}
 
 					<br>
 				</div>
-				<div class="mdl-cell mdl-color--white  mdl-cell--6-col mdl-cell--12-col-phone" >
+				<div class=" mdl-color--white  mdl-cell--12-col mdl-cell--12-col-phone" >
 					<i  class="material-icons " style="vertical-align: middle;">people</i>
 					{{event.ageRange}}
-					<br>
+					<br><br>
 				</div>
-
+				</th>
+			</tr>
+</table>
 
 			</div>
 
-
-
+</div>
 		</div>
 
-	<table class=" mdl-cell--10-col mdl-cell--10-col-phone mdl-data-table mdl-js-data-table  mdl-shadow--2dp">
-		<thead>
-		<tr  >
-			<th class="mdl-data-table__cell--non-numeric">#</th>
-			<th>Nombre</th>
-			<th>Sexo</th>
-			<th>Correo</th>
-			<th>Hora de Ingreso</th>
-			<th>Primera vez</th>
-		</tr>
-		</thead>
-		<tbody ng-repeat="user in eventUsers">
-		<tr >
 
-			<td>{{$index+1}}</td>
-			<td>{{user.name}}</td>
-			<td>{{user.gender}}</td>
-			<td>{{user.email}}</td>
-			<td>{{user.dateAttendance | date:'medium'}}</td>
-			<td>{{user.isFirstTime}}</td>
 
-		</tr>
-		</tbody>
-	</table>
+			<table class="mdl-cell--10-col mdl-cell--12-col-phone mdl-data-table mdl-js-data-table  mdl-shadow--2dp">
+				<thead>
+				<tr  >
+					<th class="mdl-data-table__cell--non-numeric">#</th>
+					<th>Nombre</th>
+					<th>Sexo</th>
+					<th>Correo</th>
+					<th>Hora de Ingreso</th>
+					<th>Primera vez</th>
+				</tr>
+				</thead>
+				<tbody ng-repeat="user in eventUsers">
+				<tr >
 
-	<div class="mdl-cell mdl-cell--10-col mdl-cell--10-col-phone charts-custom">
-		<table>
-		<tr>
-			<th>
-		<div class="chart-custom " id="bySex"></div>
-			</th><th>
-		<div class="chart-custom "  id="byfirstTime"></div>
-		</th><th>
-		<div class="chart-custom "  id="byDesc"></div>
-			</th>
-		</tr>
-		</table>
-	</div>
+					<td>{{$index+1}}</td>
+					<td>{{user.name}}</td>
+					<td>{{user.gender}}</td>
+					<td>{{user.email}}</td>
+					<td>{{user.dateAttendance | date:'medium'}}</td>
+					<td>{{user.isFirstTime}}</td>
+
+				</tr>
+				</tbody>
+			</table>
+	<div class="chart-custom mdl-cell mdl-cell--10-col mdl-cell--10-col-phone"  id="byDesc"></div>
+	<div class="chart-custom mdl-cell mdl-cell--10-col mdl-cell--10-col-phone" id="bySex"></div>
+	<div class="chart-custom mdl-cell mdl-cell--10-col mdl-cell--10-col-phone"  id="byfirstTime"></div>
+
+
+
+
+
 
 
 
