--- a/app/evento/evento.html
+++ b/app/evento/evento.html
@@ -14,11 +14,11 @@
 
 
 		<div class="mdl-cell mdl-color--white  mdl-cell--10-col mdl-cell--12-col-phone mdl-shadow--2dp" >
-			<div class=" mdl-color--white  mdl-cell--8-col mdl-cell--12-col-phone " >
+			<div class=" mdl-color--white  mdl-cell--10-col mdl-cell--12-col-phone " >
 			<table><tr>
 				<th>
 
-					<div class="mdl-cell mdl-cell--8-col mdl-cell--12-col-phone">
+					<div class="mdl-cell mdl-cell--6-col mdl-cell--12-col-phone">
 					<img
 							style=" width:100%; height: auto;" src="{{event.image}}">
 					<br>
@@ -27,7 +27,7 @@
 				</th>
 				<th>
 
-			<div class=" mdl-color--white  mdl-cell--12-col mdl-cell--12-col-phone" >
+				<div class=" mdl-color--white  mdl-cell--24-col mdl-cell--12-col-phone" >
 				<br>
 				<i  class="material-icons " style="vertical-align: middle;">alarm</i>
 				{{event.date | date : 'mediumDate'}}
@@ -36,18 +36,18 @@
 				<br>
 
 			</div>
-				<div class=" mdl-color--white  mdl-cell--12-col mdl-cell--12-col-phone" >
+				<div class=" mdl-color--white  mdl-cell--24-col mdl-cell--12-col-phone" >
 					<i  class="material-icons " style="vertical-align: middle;">music_note</i>
 					{{event.musicGenres}}
 					<br>
 				</div>
-				<div class=" mdl-color--white  mdl-cell--12-col mdl-cell--12-col-phone" >
+				<div class=" mdl-color--white  mdl-cell--24-col mdl-cell--12-col-phone" >
 					<i  class="material-icons " style="vertical-align: middle;">accessibility</i>
 					{{event.clothing}}
 
 					<br>
 				</div>
-				<div class=" mdl-color--white  mdl-cell--12-col mdl-cell--12-col-phone" >
+				<div class=" mdl-color--white  mdl-cell--24-col mdl-cell--12-col-phone" >
 					<i  class="material-icons " style="vertical-align: middle;">people</i>
 					{{event.ageRange}}
 					<br><br>
@@ -87,9 +87,9 @@
 				</tr>
 				</tbody>
 			</table>
-	<div class="chart-custom mdl-cell mdl-cell--10-col mdl-cell--10-col-phone"  id="byDesc"></div>
-	<div class="chart-custom mdl-cell mdl-cell--10-col mdl-cell--10-col-phone" id="bySex"></div>
-	<div class="chart-custom mdl-cell mdl-cell--10-col mdl-cell--10-col-phone"  id="byfirstTime"></div>
+	<div class="chart-custom mdl-cell mdl-cell--10-col mdl-cell--10-col-phone mdl-shadow--2dp"  id="byDesc"></div>
+	<div class="chart-custom mdl-cell mdl-cell--10-col mdl-cell--10-col-phone mdl-shadow--2dp" id="bySex"></div>
+	<div class="chart-custom mdl-cell mdl-cell--10-col mdl-cell--10-col-phone mdl-shadow--2dp"  id="byfirstTime"></div>
 
 
 
