--- a/app/eventos/eventos.html
+++ b/app/eventos/eventos.html
@@ -1,6 +1,6 @@
 <center>
 	<br>
-	
+
 
 	<div class="filter-container">
 
@@ -21,6 +21,9 @@
 
 	</div>
 	<br>
+
+
+	<div class="mdl-grid">
 
 	<div class="event  mdl-shadow--2dp mdl-cell mdl-cell--3-col mdl-cell--12-col-phone"
 		 ng-repeat="event in events | orderBy:'date' " ng-click="goToEventDetails(event)">
@@ -76,7 +79,7 @@
 		</div>
 	</div>
 
-
+</div>
 	</center>
 
 
