--- a/app/crearEventos/crearEventos.html
+++ b/app/crearEventos/crearEventos.html
@@ -1,4 +1,4 @@
-
+<div  class="mdl-cell mdl-cell--12-col mdl-cell--12-col-phone">
 <center><br>
   <div>
   <md-input-container class="mdl-cell mdl-cell--6-col mdl-cell--12-col-phone md-block">
@@ -165,52 +165,19 @@
   <button ng-click="saveEvent()" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">Publicar</button>
 
 </center>
-
-
-<div class="view-container create-event">
-<div>
-  <md-progress-circular ng-disabled="isLoading" class="md-warn md-hue-3 loader-saving hidden" md-diameter="70">
 </div>
 
+<!-- <div class="view-container create-event">
+<div>
+ <md-progress-circular ng-disabled="isLoading" class="md-warn md-hue-3 loader-saving hidden" md-diameter="70">
+</div> -->
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- Button trigger modal -->
+<!-- Button trigger modal
 <button type="button" id="openEventSavedModal" class="btn btn-primary btn-lg hidden" data-toggle="modal" data-target="#myModal">
   Launch demo modal
 </button>
-
-<!-- Modal -->
+-->
+<!-- Modal
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -232,4 +199,4 @@
   </div>
 </div>
 	
-</div>
+</div>-->
