--- a/app/index.html
+++ b/app/index.html
@@ -97,14 +97,14 @@
             <span class="visuallyhidden">Accounts</span>
           </button>
           <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="accbtn">
-            <li class="mdl-menu__item" href="#!/crear-eventos">
-              <i style="vertical-align: middle;" class="material-icons">create</i> Crear Evento</li>
-            <li class="mdl-menu__item" href="#!/eventos-pasados">
-              <i style="vertical-align: middle;" class="material-icons">event_note</i>Eventos Futuros</li>
-            <li class="mdl-menu__item" href="#!/eventos-futuros">
-              <i style="vertical-align: middle;" class="material-icons">event_available</i>Eventos Pasados</li>
-            <li class="mdl-menu__item" href="#!/configuracion">
-              <i style="vertical-align: middle;" class="material-icons">settings</i>Configuracion</li>
+            <a class="mdl-menu__item" href="#!/crear-eventos">
+              <i style="vertical-align: middle;" class="material-icons">create</i> Crear Evento</a>
+            <a class="mdl-menu__item" href="#!/eventos-pasados">
+              <i style="vertical-align: middle;" class="material-icons">event_note</i>Eventos Futuros</a>
+            <a class="mdl-menu__item" href="#!/eventos-futuros">
+              <i style="vertical-align: middle;" class="material-icons">event_available</i>Eventos Pasados</a>
+            <a class="mdl-menu__item" href="#!/configuracion">
+              <i style="vertical-align: middle;" class="material-icons">settings</i>Configuracion</a>
           </ul>
         </div>
       </header>
