--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Sin impresiones, Sin filas, Solo muestra tu Smartphone!" />
     <header class="mdl-layout__header " >
         <div class="mdl-layout__header-row">
             <!-- Title -->
-            <span class="mdl-layout-title">izinait | Business</span>
+            <span class="mdl-layout-title">izinait | Sistema Administrativo</span>
             <!-- Add spacer, to align navigation to the right -->
             <div class="mdl-layout-spacer">     </div>
             <!-- Navigation -->
@@ -78,11 +78,16 @@ Sin impresiones, Sin filas, Solo muestra tu Smartphone!" />
         </nav>
     </div>
     <main class="mdl-layout__content mdl-color--blue-grey-50">
+        <br>
+
+            <div>
+                <center>
+        <div class="  mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--12-col-phone">
         <br><br>
-        <center>
-            <div class="mdl-cell mdl-cell--2-col mdl-cell--2-col-phone">
+
+            <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone">
                 <img src="app/img/logo.png" style="width: 70%;height: auto"> </div>
-            <br><br><br>
+
 
             <script type="text/javascript">
                 function mostrarBarraCargando(){
@@ -113,8 +118,22 @@ Sin impresiones, Sin filas, Solo muestra tu Smartphone!" />
             <br><br>
      <!--       Al registrarte aceptas los  <a class="mdl-color-text--cyan" href="http://www.izinait.com/terms">Términos y condiciones </a> de uso y las Politicas de privacidad de <a class="mdl-color-text--cyan" href="http://www.izinait.com/">izinait  </a>
             <br><br> -->
+
             <div class="fb-like" data-href="https://www.facebook.com/IzinaitCL" data-layout="box_count" data-action="like" data-size="large" data-show-faces="false" data-share="false"></div>
-        </center>
+            <br><br>
+        </div>
+                    <div class="  mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--12-col-phone">
+                        <div class="mdl-cell  mdl-cell--10-col"> <br>
+                        En la mejora continua y actualizacion que buscan las empresas, nos encontramos con una necesidad de invertir más recursos de la tecnología y herramientas que le permitan a los empresarios disminuir el riezgo y minimizar la incertidumbre de la economia en el negocio, es donde apunta Iziboss, la aplicacion entrega al empresario la posibilidad de analizar en tiempo real como evoluciona su evento, permite conocer los gustos y orientaciones de sus clientes, y como herramienta puede extraer reportes para gestionar un analisis exhaustivo que respalda la toma de desiciones.
+                        A su vez debemos considerar que existe algo muy importante este ultimo tiempo, que es como llegamos a nuestros clientes, solo podemos determinar que ofrecer, que decirles si los conocemos... Iziboss te permite conocer a tus clientes.
+                            <br><br>
+                        </div>
+                        </div>
+
+                </center>
+       </div>
+
+
     </main>
 
 </div>
