--- a/app/index.html
+++ b/app/index.html
@@ -88,10 +88,13 @@
     </header>
     <div class="mdl-layout__drawer demo-drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50 ">
 
-      <header class="demo-drawer-header">
+      <header class="demo-drawer-header"><center>
         <img src="img/logo.png" class="demo-avatar">
+      </center>
         <div class="user-header demo-avatar-dropdown">
+          <center>
           &nbsp; <span class="text user"> </span>
+            </center>
           <div class="mdl-layout-spacer"></div>
           <button id="accbtn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
             <i class="material-icons" role="presentation">arrow_drop_down</i>
