--- a/app/index.html
+++ b/app/index.html
@@ -160,7 +160,7 @@
     firebase.initializeApp(config);
   </script>
 
-  <a href="https://github.com/google/material-design-lite/blob/mdl-1.x/templates/dashboard/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored mdl-color-text--white">View Source</a>
+  <a href="http://user.izinait.com/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored mdl-color-text--white">ir a izinait</a>
 
 
   <!-- Angular Material Library -->    <!-- Angular Material requires Angular.js Libraries -->
