--- a/app/index.html
+++ b/app/index.html
@@ -94,14 +94,22 @@
             <span class="visuallyhidden">Accounts</span>
           </button>
           <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="accbtn">
-            <li class="mdl-menu__item"><i class="material-icons">create</i>
-              Crear Evento</li>
-            <li class="mdl-menu__item"><i class="material-icons">event_note</i>
-              Eventos Futuros</li>
-            <li class="mdl-menu__item"><i class="material-icons">event_available</i>
-              Eventos Pasados</li>
-            <li class="mdl-menu__item"><i class="material-icons">settings</i>
-              Configuracion</li>
+            <li class="mdl-menu__item">
+                <i class="material-icons" href="#!/crear-eventos">create</i>
+              Crear Evento
+            </li>
+            <li class="mdl-menu__item" href="#!/eventos-futuros">
+                <i class="material-icons">event_note</i>
+              Eventos Futuros
+            </li>
+            <li class="mdl-menu__item" href="#!/eventos-pasados">
+                <i class="material-icons">event_available</i>
+              Eventos Pasados
+            </li>
+            <li class="mdl-menu__item">
+                <i class="material-icons">settings</i>
+              Configuracion
+            </li>
           </ul>
         </div>
       </header>
@@ -111,16 +119,18 @@
       <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
         <a class="mdl-navigation__link" href="#!/eventos">
           <i role="presentation" class="material-icons" style="vertical-align: middle;">event</i>
-          Eventos</a>
+          Eventos
+        </a>
+
         <a class="mdl-navigation__link" href="#!/clientes">
           <i role="presentation" class="material-icons" style="vertical-align: middle;">person</i>
-          clientes</a>
+          Clientes</a>
         <a class="mdl-navigation__link" href="#!/doorman">
           <i role="presentation" class="material-icons" style="vertical-align: middle;">phonelink_lock</i>
-          doormans </a>
+          Doormans </a>
           <a class="mdl-navigation__link" href="#!/facturacion">
             <i role="presentation" class="material-icons" style="vertical-align: middle;">payment</i>
-            facturacion</a>
+            Facturacion</a>
         <a  id="sign-out-button" class="mdl-navigation__link" >
           <i class="material-icons" style="vertical-align: middle;">power_settings_new</i>   Salir</a>
 
