--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
     }
   </style>
 
-
+<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 
 </head>
 <body>
@@ -193,8 +193,6 @@
   <!-- <script src="libs/angular.js"></script> -->
   <script src="https://cdn.firebase.com/libs/angularfire/2.0.2/angularfire.min.js"></script>
 
-
-  <script src="js/angular.js"></script>
   <script src="js/angular-route.js"></script>
   <script src="app.js"></script>
   <script src="view1/view1.js"></script>
@@ -216,6 +214,8 @@
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
+  
+  <script src="js/bootstrap.js"></script>
 
 
   <script type="text/javascript">
