fixed erron in bill

--- a/app/facturacion/facturacion.html
+++ b/app/facturacion/facturacion.html
@@ -10,18 +10,18 @@
   <md-input-container class="mdl-cell mdl-cell--2-col mdl-cell--12-col-phone" style="margin-right: 10px;">
     <label>Mes</label>
     <md-select ng-model="month">
-      <md-option  value="1">Enero</md-option>
-      <md-option  value="2">Febrero</md-option>
-      <md-option  value="3">Marzo</md-option>
-      <md-option  value="4">Abril</md-option>
-      <md-option  value="5">Mayo</md-option>
-      <md-option  value="6">Junio</md-option>
-      <md-option  value="7">Julio</md-option>
-      <md-option  value="8">Agosto</md-option>
-      <md-option  value="9">Septiembre</md-option>
-      <md-option  value="10">Obtubre</md-option>
-      <md-option  value="11">Noviembre</md-option>
-      <md-option  value="12">Diciembre</md-option>
+      <md-option  value="enero">Enero</md-option>
+      <md-option  value="febrero">Febrero</md-option>
+      <md-option  value="marzo">Marzo</md-option>
+      <md-option  value="abril">Abril</md-option>
+      <md-option  value="mayo">Mayo</md-option>
+      <md-option  value="junio">Junio</md-option>
+      <md-option  value="julio">Julio</md-option>
+      <md-option  value="agosto">Agosto</md-option>
+      <md-option  value="septiembre">Septiembre</md-option>
+      <md-option  value="obtubre">Obtubre</md-option>
+      <md-option  value="noviembre">Noviembre</md-option>
+      <md-option  value="diciembre">Diciembre</md-option>
     </md-select>
   </md-input-container>
 
