--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@ Sin impresiones, Sin filas, Solo muestra tu Smartphone!" />
 </div>
 
 <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase.js"></script>
+<script src="app/js/jquery-3.1.1.js"></script>
 <script src="index.js"></script>
 
 <script>
