--- a/app/crearEventos/crearEventos.html
+++ b/app/crearEventos/crearEventos.html
@@ -4,7 +4,7 @@
   <center><br>
 
   <div>
- <md-progress-circular ng-disabled="isLoading" class="progress-circular md-warn md-hue-3 loader-saving hidden" md-diameter="70">
+ <md-progress-circular ng-disabled="isLoading" class="progress-circular md-warn md-hue-3 loader-saving hidden" md-diameter="70"/>
 </div>
 
   <div>
